# multiplex_wormhole

./: .gitignore  CHANGELOG.md  README.md  __init__.py  add_adapters.sh  filter_primers_Tm_dG.sh  multiplex_primer_design.py  multiplex_primer_design.sh  multiplex_wormhole.py  optimize_primers.py  panel_assessment.py  primer3.sh  primer3_BaseSettings.txt  primer3_Base_NoSecondaryFilters.txt  primer3_BroadSettings.txt  primer3_batch_design.sh  primer3_settings.txt  primer_design_STEP1.sh  pyproject.toml  requirements.txt  translate_primerSuite_report.R
.github/workflows/: pages.yml  python-app.yml  release.yml  release_testpypi.yml
Test/: TestGit_filteredPrimers.csv
Test/1_InitialPrimers/: .out
docs/: 1_BatchPrimerDesign.md  2_DimerPrediction.md  2_FilterPrimers.md  3_CheckPrimerSpecificity.md  3_TabulateDimers.md  4A_ExploreOptimParameters.md  4_DimerPrediction.md  4_OptimizeMultiplexPrimerSet.md  4_PrimerPrediction.md  5_MultipleRunOptimization.md  5_TabulateDimers.md  5_tabulateDimers.md  6A_ExploreOptimParameters.md  6_AssessPanel.md  6_OptimizeMultiplexPrimerSet.md  7_OptimizationProcess.md  8_PrimerTreeSpecificityChecks  8_SpecificityChecks.md  AddKeeplistToFASTA.md  CSVtoFASTA.md  OptimizationProcess.md  _config.yml  assess_panel.md  index.md  multiplex_wormhole  multiplex_wormhole.md  setup_mfeprimer.md
examples/: Example_PrimerPairInteractions_binary_sum.csv  Example_PrimerPairInteractions_binary_wide.csv  Example_PrimerPairInteractions_sum.csv  Example_PrimerPairInteractions_wide.csv  Input_Templates.csv  example_keeplist.fasta
multiplex_wormhole/: multiple_run_optimization.py  optimize_multiplex.py  panel_assessment.py  plot_ASA_temps.py  primer3_batch_design.py  tabulate_MFEprimer_dimers.py
multiplex_wormhole/extras/: find_max_amplicons.py  merging_all_primer_info.R
primer3_settings/: primer3_Base_NoSecondaryFilters.txt  primer3_Broad_NoSecondaryFilters.txt  primer3_settings.txt
scripts/: CSVtoFasta.py  add_keeplist_to_fasta.py  add_whitelist_to_fasta.R  add_whitelist_to_fasta.py  calculate_dimer_meltingTemp.py  check_final_panel.R  check_primer_specificity.py  check_specificity.sh  convert_CSV_to_fasta.sh  create_in_templates.R  filter_primers.py  filter_primers_Tm_dG.sh  find_max_amplicons.py  multiple_run_optimization.py  optimize_primers.py  plotSAtemps.py  plot_ASA_temps.py  plot_SA_temps.py  primer3.sh  primer3_batch_design.py  primer3_batch_design.sh  tabulate_MFEprimer_dimers.py  tabulate_MFEprimer_dimers_OPTIMIZED.py  tabulate_MFEprimer_dimers_pandas.py  tabulate_dimers_function.py
scripts/extras/: CSVtoFasta.py  merging_all_primer_info.R  translate_primerSuite_report.R
src/: __init__.py  multiplex_wormhole.py  panel_assessment.py
src/multiplex_wormhole/: __init__.py  add_keeplist_to_fasta.py  batch_primer3_design.py  create_in_templates.R  multiple_run_optimization.py  multiplexWormhole.py  offtarget_thermodynamics.py  optimize_multiplex.py  panel_assessment.py  plot_ASA_temps.py  primerTree_specificity_checks.R  setup_mfeprimer.py  tabulate_dimers.py
src/multiplex_wormhole.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/multiplex_wormhole/helpers/: CSVtoFasta.py  __init__.py  _setup_mfeprimer.py  add_keeplist_to_fasta.py  logging_setup.py  setup_mfeprimer.py
src/multiplex_wormhole/scripts/: add_keeplist_to_fasta.py  multiple_run_optimization.py  plot_ASA_temps.py  primer3_batch_design.py
src/multiplex_wormhole/scripts/extras/: primer3.sh  primer3_batch_design.py
src/scripts/: CSVtoFasta.py  check_primer_specificity.py  create_in_templates.R  multiple_run_optimization.py  optimize_multiplex.py  optimize_primers.py  setup_mfeprimer.py  tabulate_MFEprimer_dimers.py
tests/: test_pipeline.py
