[project]
name = "multiplex_wormhole"
version = "1.0.2"
authors = [
	{ name="Maggie Hallerud", email="hallerum@oregonstate.edu" }
]
description = "In silico optimization for multiplex PCR primer design for targeted sequencing applications"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [ "matplotlib==3.5.2",
	"numpy==1.24,<2.0",
	"pandas==1.4,<2.0",
	"primer3-py==2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",

    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["multiplex PCR", "bioinformatics", "SNP panel"]

[project.urls]
Homepage = "https://github.com/mhallerud/multiplex_wormhole"
Issues = "https://github.com/mhallerud/multiplex_wormhole/issues"
Documentation = "https://mhallerud.github.io/multiplex_wormhole/"

