[project]
name = "multiplex_wormhole"
#pytest version = 1.0.26
#pypi version = 1.1.0
version = "1.1.2"
authors = [
	{ name="Maggie Hallerud", email="hallerum@oregonstate.edu" }
]
description = "In silico optimization for multiplex PCR primer design for targeted sequencing applications"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "matplotlib>=3.5.2",
	"numpy>=1.24.4",
	"pandas>=1.4.4",
	"primer3-py>=2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["multiplex PCR", "bioinformatics", "SNP panel"]

# specify executable scripts (add project.gui-scripts for windows...)
[project.scripts]
multiplex-wormhole = "multiplex_wormhole.multiplexWormhole:cli"
mw-primer-design = "multiplex_wormhole.batch_primer3_design:cli"
mw-tabulate-dimers = "multiplex_wormhole.tabulate_dimers:cli"
mw-plot-simannel = "multiplex_wormhole.plot_ASA_temps:cli"
mw-optimize-multiplex = "multiplex_wormhole.optimize_multiplex:cli"
mw-mult-optimizations = "multiplex_wormhole.multiple_run_optimization:cli"
mw-assess-panel = "multiplex_wormhole.panel_assessment:cli"
mw-specificity = "multiplex_wormhole.offtarget_thermodynamics:cli"
mw-csv2fasta = "multiplex_wormhole.helpers.CSVtoFasta:cli"
mw-add-keeplist = "multiplex_wormhole.helpers.add_keeplist_to_fasta:cli"
mw-setup-mfeprimer = "multiplex_wormhole.helpers._setup_mfeprimer:main"

[tool.setuptools.package-data]
multiplex_wormhole = ["*.R"]

# add tests
[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# webpages
[project.urls]
Homepage = "https://github.com/mhallerud/multiplex_wormhole"
Issues = "https://github.com/mhallerud/multiplex_wormhole/issues"
Documentation = "https://mhallerud.github.io/multiplex_wormhole/"
